WHAT IS NEW?

April ? 2019 [Fufluns]

  Highlights:
    * ~~Fill this in later~~

  * New Features
    * New spriteset editor [Ralph]
    * Backdrops can now be any size [Ralph]
    * You can now import PNG and JPG files as well as BMP (they're
      decompressed on import, so beware of importing large images) [Ralph]
    * When importing a backdrop or tileset from an unpaletted image you can use
      dithering for hopefully-better conversion to your master palette [Ralph]
    * Added a "wall display style" setting to the passmap editor; walls now
      pulse rather than flash, and there's a new "outlined" style [Ralph]
    * Heroes can have intrinsic counter-attacks just like Enemies [James]
    * Add the ability to browse for Attacks, Enemies, Heroes, Textboxes,
      Shops, stuff in shops, Sound Effects, Songs.
    * You can press Ctrl+F or click the "Filter" button to filter/search the
      thingbrowser screen by name. [James]
    * Line slices [Ralph]
    * New attack target class: "Counter (last to hit attacker)", which you
      should normally use for counterattacks instead of Revenge [Ralph]
    * Previewing MP3 files in the file browser reenabled (Windows only) [Ralph]
    * New bitset "Cap minimum stats to zero" can prevent equipment with
      negative stat bonuses from making a hero's stats negative [James]
    * Maximum Shop ID has been raised from 99 to 32767 [James]
    * Added a general bitset to hide empty save slots at the bottom of the
      save/load menu. (Won't shows less than 4 slots unless you specifically
      set a max lower than 4) [James]
    * Max number of save slots increased from 32 to 1000 [James]
    * "Can't be selected" subtype for "Label" menu items. (The "Caption"
      item type is renamed "Label", and the old badly named "Unselectable"
      subtype is renamed "Disabled") [Ralph]
    * In user-defined menus each menu item can now have its own color and
      'disabled' color [Ralph]